microk8s/staging/traefik-ext/traefik-ing.yml
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: http-to-https-redirect
#   namespace: traefik
# spec:
#   entrypoints:
#   - http
#   routes:
#   - match: Host(`hal.rask.dk`)
#     kind: Rule
#     services:
#     - name: traefik
#       port: 80
#     middlewares:
#     - name: redirect-https

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entrypoints:
  - https
  routes:
  - match: Host(`hal.rask.dk`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
    kind: Rule
    services:
    - name: traefik-ext
      port: 8080
    middlewares:
    - name: traefik-auth
  tls:
    certResolver: default

# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: traefik-v1-dashboard
#   namespace: traefik
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /
#         backend:
#           serviceName: traefik-v1
#           servicePort: traefik
